SCRUM-71 feat: 관광지 연관 콘텐츠-아티스트 조회를 Episode 기반 그룹 구조로 구현