@@ -1,9 +1,12 @@
 package com.tracek.domain.location.application.facade;
 
+import com.querydsl.jpa.impl.JPAQueryFactory;
 import com.tracek.domain.artist.application.dto.ArtistResult;
 import com.tracek.domain.artist.application.service.ArtistQueryService;
+import com.tracek.domain.content.application.dto.ContentArtistPair;
 import com.tracek.domain.content.application.dto.ContentResult;
 import com.tracek.domain.content.application.service.ContentQueryService;
+import com.tracek.domain.content.application.service.EpisodeQueryService;
 import com.tracek.domain.image.application.dto.ImageResult;
 import com.tracek.domain.image.application.service.ImageQueryService;
 import com.tracek.domain.location.application.dto.LocationDetailResult;
@@ -27,6 +30,8 @@ public class LocationFacade {
     private final ContentQueryService contentQueryService;
     private final ArtistQueryService artistQueryService;
     private final ImageQueryService imageQueryService;
+    private final EpisodeQueryService episodeQueryService;
+    private final JPAQueryFactory queryFactory;
 
     // 메인 관광지 상세 정보 조회 (계층형 데이터 그룹핑)
     public LocationDetailResult getLocationDetails(Long locationId) {
@@ -112,46 +117,67 @@ public class LocationFacade {
     public LocationRelatedInfoResult getRelatedContentAndArtists(Long locationId) {
         Location location = locationQueryService.getLocationEntity(locationId);
 
-        // 1. 매핑 데이터 가져오기.
-        List<LocationContentArtist> mappings =
-                locationQueryService.getMappingsByLocationId(locationId);
-
-        // 2. ID 목록만 수집
+        // 1. 콘텐츠-아티스트 쌍 id 가져오기.
+        List<ContentArtistPair> pairs = episodeQueryService.getContentArtistPairs(locationId);
         List<Long> contentIds =
-                mappings.stream().map(m -> m.getContent().getId()).distinct().toList();
+                pairs.stream().map(ContentArtistPair::getContentId).distinct().toList();
         List<Long> artistIds =
-                mappings.stream().map(m -> m.getArtist().getId()).distinct().toList();
+                pairs.stream().map(ContentArtistPair::getArtistId).distinct().toList();
 
-        // 3. 배치 조회 IN 절 쿼리 1번씩 묶어서 가져오기.
+        // 2. 콘텐츠 id-> 아티스트 id 그룹핑
+        Map<Long, List<Long>> artistIdsByContentId =
+                pairs.stream()
+                        .collect(
+                                Collectors.groupingBy(
+                                        ContentArtistPair::getContentId,
+                                        Collectors.mapping(
+                                                ContentArtistPair::getArtistId,
+                                                Collectors.toList())));
+        // 3. 배치 조회 (In절, N+1 방지)
         List<ContentResult> contents = contentQueryService.getContentsByIds(contentIds);
-        List<ArtistResult> artists = artistQueryService.getArtistsByIds(artistIds);
+        Map<Long, ArtistResult> artistResultMap =
+                artistQueryService
+                        .getArtistsByIds(artistIds)
+                        .stream() // IN절로 List<ArtistResult> 가져오기
+                        .collect(
+                                Collectors.toMap(
+                                        ArtistResult::getId,
+                                        a -> a)); // Map 변환(ArtistResult의 id : ArtistResult)
 
-        // 4. Map 변환 (ID -> DTO)
-        Map<Long, ContentResult> contentMap =
-                contents.stream().collect(Collectors.toMap(ContentResult::getContentId, c -> c));
-        Map<Long, ArtistResult> artistMap =
-                artists.stream().collect(Collectors.toMap(ArtistResult::getId, a -> a));
-
-        // 5. 조립
-        List<LocationRelatedInfoResult.RelatedItemResult> relatedItems =
-                mappings.stream()
+        // 3. 리스트 변환
+        List<LocationRelatedInfoResult.RelatedContentGroup> groups =
+                contents.stream()
                         .map(
-                                m -> {
-                                    ContentResult content = contentMap.get(m.getContent().getId());
-                                    ArtistResult artist = artistMap.get(m.getArtist().getId());
+                                content -> {
+                                    List<LocationRelatedInfoResult.RelatedArtistResult> artists =
+                                            artistIdsByContentId
+                                                    .getOrDefault(
+                                                            content.getContentId(),
+                                                            List.of()) // contentId : (artistId
+                                                    // : artist)
+                                                    .stream()
+                                                    .map(artistResultMap::get)
+                                                    .filter(Objects::nonNull)
+                                                    .map(
+                                                            a ->
+                                                                    LocationRelatedInfoResult
+                                                                            .RelatedArtistResult.of(
+                                                                            a.getId(),
+                                                                            a.getName(),
+                                                                            a.getPictureUrl(),
+                                                                            a.getIsGroup()))
+                                                    .toList();
 
-                                    return LocationRelatedInfoResult.RelatedItemResult.of(
-                                            m.getId(),
+                                    return LocationRelatedInfoResult.RelatedContentGroup.of(
                                             content.getContentId(),
                                             content.getTitle(),
                                             content.getCategory(),
                                             content.getPictureUrl(),
-                                            artist.getId(),
-                                            artist.getName(),
-                                            artist.getPictureUrl());
+                                            artists);
                                 })
-                        .collect(Collectors.toList());
+                        .toList();
 
-        return LocationRelatedInfoResult.of(location.getId(), location.getName(), relatedItems);
+        return LocationRelatedInfoResult.of(
+                location.getId(), location.getName(), location.getAddress().getCity(), groups);
     }
 }
