@@ -2,7 +2,6 @@ package com.tracek.domain.location.presentation.response;
 
 import com.tracek.domain.location.application.dto.LocationRelatedInfoResult;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
@@ -13,42 +12,57 @@ public class LocationRelatedInfoResponse {
 
     private Long locationId;
     private String locationName;
-    private List<RelatedItemResponse> relatedItems;
+    private String city;
+    private List<RelatedContentGroupResponse> relatedContentGroups;
 
     public static LocationRelatedInfoResponse from(LocationRelatedInfoResult result) {
-        List<RelatedItemResponse> itemResponses =
-                result.getRelatedItems().stream()
-                        .map(RelatedItemResponse::from)
-                        .collect(Collectors.toList());
+        List<RelatedContentGroupResponse> groupResponses =
+                result.getRelatedContentGroups().stream()
+                        .map(RelatedContentGroupResponse::from)
+                        .toList();
 
         return new LocationRelatedInfoResponse(
-                result.getLocationId(), result.getLocationName(), itemResponses);
+                result.getLocationId(), result.getLocationName(), result.getCity(), groupResponses);
     }
 
     @Getter
     @AllArgsConstructor(access = AccessLevel.PRIVATE)
-    public static class RelatedItemResponse {
-        private Long contentArtistLocationId;
-
+    public static class RelatedContentGroupResponse {
         private Long contentId;
         private String contentTitle;
-        private String contentType;
+        private String contentCategory;
         private String contentPictureUrl;
+        private List<RelatedArtistResponse> artists;
 
+        public static RelatedContentGroupResponse from(
+                LocationRelatedInfoResult.RelatedContentGroup result) {
+            List<RelatedArtistResponse> artistResponses =
+                    result.getRelatedArtists().stream().map(RelatedArtistResponse::from).toList();
+
+            return new RelatedContentGroupResponse(
+                    result.getContentId(),
+                    result.getContentTitle(),
+                    result.getContentCategory(),
+                    result.getContentPictureUrl(),
+                    artistResponses);
+        }
+    }
+
+    @Getter
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    public static class RelatedArtistResponse {
         private Long artistId;
         private String artistName;
         private String artistPictureUrl;
+        private Boolean isGroup;
 
-        public static RelatedItemResponse from(LocationRelatedInfoResult.RelatedItemResult result) {
-            return new RelatedItemResponse(
-                    result.getContentArtistLocationId(),
-                    result.getContentId(),
-                    result.getContentTitle(),
-                    result.getContentType(),
-                    result.getContentPictureUrl(),
+        public static RelatedArtistResponse from(
+                LocationRelatedInfoResult.RelatedArtistResult result) {
+            return new RelatedArtistResponse(
                     result.getArtistId(),
                     result.getArtistName(),
-                    result.getArtistPictureUrl());
+                    result.getArtistPictureUrl(),
+                    result.getIsGroup());
         }
     }
 }
